--- a/hello.html
+++ b/hello.html
@@ -5,5 +5,38 @@
     </head>
     <body>
       Hello, World! Hello again, hello a third time hello
+        <h1> heading 1 </h1>
+        <h2> heading 1 </h2>
+        <h3> heading 1 </h3>
+        <h4> heading 1 </h4>
+        <h5> heading 1 </h5>
+        <h6> heading 1 </h6>
+
+        An unordered list
+        <ul>
+          <li>item</li>
+          <li>item2</li>
+        </ul>
+
+        An ordered list
+        <ol>
+          <li>number</li>
+          <li>num2</li>
+        </ol>
+
+        <img src="https://en.wikipedia.org/wiki/Boom_Overture#/media/File:Boom_Technology_airliner_concept.jpg" height = "200" width="300"> //or width= "50%" which makes it responsive to page size
+
+        <table>
+          <tr>
+            <th>first name </th> //table heading
+          </tr>
+          <tr>
+            <td>george bush</td> //table data e.g. name
+          <tr>
+
+        <form>
+          <input type= "text" placeholder="Full Name" name="name">
+          <button>Submit!</button>
+
     </body>
 </html>
